# ProceduralExplorationGame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OgreResources.cfg  README.md  StaticPlugins.h  avSetup.cfg  resBuild.bat  resBuild.sh
native/: CMakeLists.txt  avEngine
native/core/: CMakeLists.txt
native/core/src/: GameCoreLogger.cpp  GameCoreLogger.h  GamePrerequisites.h  GameplayConstants.cpp  GameplayConstants.h  GameplayState.cpp  GameplayState.h  PlacedItemManager.cpp  PlacedItemManager.h  PluginBaseSingleton.cpp  PluginBaseSingleton.h  ProceduralExplorationGameCoreScriptTypeTags.h
native/core/src/Collision/: CollisionDetectionWorld.cpp  CollisionDetectionWorld.h
native/core/src/MapGen/: Biomes.cpp  Biomes.h  ExplorationMapData.cpp  ExplorationMapData.h  ExplorationMapDataPrerequisites.h  ExplorationMapViewer.cpp  ExplorationMapViewer.h  MapGen.cpp  MapGen.h  MapGenClient.cpp  MapGenClient.h  MapGenDataContainer.cpp  MapGenDataContainer.h  MapGenScriptClient.cpp  MapGenScriptClient.h  MapGenScriptStep.cpp  MapGenScriptStep.h  MapGenStep.cpp  MapGenStep.h  MapGenStepMarker.cpp  MapGenStepMarker.h  RandomWrapper.cpp  RandomWrapper.h  SquirrelDeepCopy.cpp  SquirrelDeepCopy.h
native/core/src/MapGen/BaseClient/: MapGenBaseClient.cpp  MapGenBaseClient.h  MapGenBaseClientHelpers.h  MapGenBaseClientPrerequisites.h  OverworldMapTextureGenerator.cpp  OverworldMapTextureGenerator.h
native/core/src/MapGen/BaseClient/Steps/: BiomeAltitudeMapGenStep.cpp  BiomeAltitudeMapGenStep.h  BiomeFinalChangesMapGenStep.cpp  BiomeFinalChangesMapGenStep.h  BiomeVoxelMapGenStep.cpp  BiomeVoxelMapGenStep.h  CarveRiversMapGenStep.cpp  (+84 more)
native/core/src/MapGen/Mesh/: WaterMeshGenerator.cpp  WaterMeshGenerator.h
native/core/src/MapGen/PathFinding/: PathFinding.cpp  PathFinding.h
native/core/src/MapGen/Script/: CallbackScript.cpp  CallbackScript.h  CollisionWorldClass.cpp  CollisionWorldClass.h  ExplorationMapDataUserData.cpp  ExplorationMapDataUserData.h  MapGenDataContainerUserData.cpp  MapGenDataContainerUserData.h  MapGenNamespace.cpp  MapGenNamespace.h  MapGenScriptManager.cpp  MapGenScriptManager.h  MapGenScriptVM.cpp  MapGenScriptVM.h
native/core/src/MapGen/Steps/: CarveRiversMapGenStep.cpp  CarveRiversMapGenStep.h  DetermineEarlyRegionsMapGenStep.cpp  DetermineEarlyRegionsMapGenStep.h  DetermineEdgesMapGenStep.cpp  DetermineEdgesMapGenStep.h  DetermineGatewayPositionMapGenStep.cpp  DetermineGatewayPositionMapGenStep.h  DeterminePlacesMapGenStep.cpp  DeterminePlacesMapGenStep.h  DeterminePlayerStartMapGenStep.cpp  DeterminePlayerStartMapGenStep.h  DetermineRegionTypesMapGenStep.cpp  DetermineRegionTypesMapGenStep.h  DetermineRegionsMapGenStep.cpp  DetermineRegionsMapGenStep.h  DetermineRiversMapGenStep.cpp  DetermineRiversMapGenStep.h  GenerateAdditionLayerMapGenStep.cpp  GenerateAdditionLayerMapGenStep.h  GenerateMetaMapGenStep.cpp  GenerateMetaMapGenStep.h  GenerateNoiseMapGenStep.cpp  GenerateNoiseMapGenStep.h  GenerateWaterTextureMapGenStep.cpp  GenerateWaterTextureMapGenStep.h  IsolateRegionsMapGenStep.cpp  IsolateRegionsMapGenStep.h  MapGenStep.cpp  MapGenStep.h  MergeAltitudeMapGenStep.cpp  MergeAltitudeMapGenStep.h  MergeExpandableRegionsMapGenStep.cpp  MergeExpandableRegionsMapGenStep.h  MergeIsolatedRegionsMapGenStep.cpp  MergeIsolatedRegionsMapGenStep.h  MergeSmallRegionsMapGenStep.cpp  MergeSmallRegionsMapGenStep.h  PerformFinalFloodFillMapGenStep.cpp  PerformFinalFloodFillMapGenStep.h  (+22 more)
native/core/src/Ogre/: AreaProceduralWorldEmitter.h  AreaProceduralWorldEmitterFactory.h  DeflectorPlaneProceduralWorldAffector.cpp  DeflectorPlaneProceduralWorldAffector.h  DeflectorPlaneProceduralWorldAffectorFactory.h  GroundColourModifierEmitter.cpp  GroundColourModifierEmitter.h  GroundColourModifierEmitterFactory.h  MeshParticleEmitter.cpp  MeshParticleEmitter.h  OgreVoxMesh.cpp  OgreVoxMesh.h  OgreVoxMeshItem.cpp  OgreVoxMeshItem.h  OgreVoxMeshManager.cpp  OgreVoxMeshManager.h  OgreVoxMeshSerializer.cpp  OgreVoxMeshSerializer.h  PaletteValues.h  RingProceduralWorldEmitter.cpp  RingProceduralWorldEmitter.h  RingProceduralWorldEmitterFactory.h  TreeLeafEmitter.cpp  TreeLeafEmitter.h  TreeLeafEmitterFactory.h
native/core/src/Platform/iOS/: HapticFeedback.h  HapticFeedback.mm
native/core/src/System/: OgreResourceHelper.cpp  OgreResourceHelper.h
native/core/src/VisitedPlaces/: DataPointFileHandler.cpp  DataPointFileHandler.h  OverworldVoxMeshSceneDataInserter.cpp  OverworldVoxMeshSceneDataInserter.h  TerrainChunkFileHandler.cpp  TerrainChunkFileHandler.h  TileDataParser.cpp  TileDataParser.h  VisitedPlaceMapDataHelper.cpp  VisitedPlaceMapDataHelper.h  VisitedPlacesParser.cpp  VisitedPlacesParser.h  VisitedPlacesPrerequisites.h  VoxMeshSceneDataInserter.cpp  VoxMeshSceneDataInserter.h
native/core/src/Voxeliser/: TerrainFaceMerger.cpp  TerrainFaceMerger.h  VoxSceneDumper.cpp  VoxSceneDumper.h  Voxeliser.cpp  Voxeliser.h
native/plugin/: CMakeLists.txt
native/plugin/src/: AreaProceduralWorldEmitter.cpp  AreaProceduralWorldEmitter.h  GameCorePBSHlmsListener.cpp  GameCorePBSHlmsListener.h  GameCoreUnlitHlmsListener.cpp  GameCoreUnlitHlmsListener.h  PluginBaseSingleton.cpp  PluginBaseSingleton.h  ProceduralExplorationGameCorePlugin.cpp  ProceduralExplorationGameCorePlugin.h  RingProceduralWorldEmitter.cpp  RingProceduralWorldEmitter.h  RingProceduralWorldEmitterFactory.h
native/plugin/src/Scripting/: DataPointFileUserData.cpp  DataPointFileUserData.h  ExplorationMapDataUserData.cpp  ExplorationMapDataUserData.h  GameCoreNamespace.cpp  GameCoreNamespace.h  MeshParticleEmitterUserData.cpp  MeshParticleEmitterUserData.h  ProceduralExplorationGameCorePluginScriptTypeTags.h  VisitedPlaceMapDataUserData.cpp  VisitedPlaceMapDataUserData.h
native/tool/: CMakeLists.txt
native/tool/src/: main.cpp
native/voxelConverterTool/: CMakeLists.txt
native/voxelConverterTool/src/: Prerequisites.h  main.cpp
native/voxelConverterTool/src/File/: VoxelFileParser.h
native/voxelConverterTool/src/Pipeline/: FacesToVerticesFile.cpp  FacesToVerticesFile.h  VoxData.h  VoxToFaces.cpp  VoxToFaces.h
(+814 files in other folders)
